--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
             <section class="gallery">
                 <div class="gallery">
-                    <p>Planets</p>
+                    <p class="planetTitle">Planets</p>
                     <div class="cardsGrid">
                         <div class="card">
     
