--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="./assets/planet.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>InfoPlanets</title>
+    <title>InfoPlanet</title>
 </head>
 
 <body>
     <main>
-        <nav>
+        <nav class="navbar">
             <img src="./assets/planet.svg" alt="" srcset="">
             <p>InfoPlanet</p>
         </nav>
@@ -22,21 +22,20 @@
             <section class="title">
                 <!-- <h1>Our Solar System</h1> -->
                 <svg viewbox="0 0 10 2">
-                    <text x="5" y="1" text-anchor="middle" font-size="1" fill="none" stroke-width=".015" stroke="#fff" font-family="Roboto Slab">Our Solar System</text>
+                    <text x="5" y="1" text-anchor="middle" font-size="1.2" fill="none" stroke-width=".015" stroke="#fff" font-family="Roboto Slab">Our Solar System</text>
                   </svg>
             </section>
             <section class="gallery">
                 <div class="gallery">
                     <p class="planetTitle">Planets</p>
-                    <div class="cardsGrid">
-                        <div class="card">
-    
-                        </div>
+                    <div class="cardsGrid" id="gridCards">
+                        <!-- <div class="card"></div> -->
                     </div>
                 </div>
             </section>
         </header>
     </main>
+    <script src="./main.js"></script>
 </body>
 
 </html>
