--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <section class="title">
                 <!-- <h1>Our Solar System</h1> -->
-                <svg viewbox="0 0 10 2">
+                <svg viewbox="0 0 10 2" class="bigTtitle">
                     <text x="5" y="1" text-anchor="middle" font-size="1.2" fill="none" stroke-width=".015" stroke="#fff" font-family="Roboto Slab">Our Solar System</text>
                   </svg>
             </section>
